Temporary undo drawer content overflow because it's causing an issue

--- a/src/components/unstyled/drawer.css
+++ b/src/components/unstyled/drawer.css
@@ -2,7 +2,7 @@
   @apply relative grid;
   grid-auto-columns: max-content auto;
   &-content {
-    @apply col-start-2 row-start-1 overflow-x-auto;
+    @apply col-start-2 row-start-1;
   }
   &-side {
     @apply pointer-events-none fixed start-0 top-0 col-start-1 row-start-1 grid w-full grid-cols-1 grid-rows-1 items-start justify-items-start overflow-y-auto overscroll-contain;
